--- a/nuxeo-runtime-scripting/pom.xml
+++ b/nuxeo-runtime-scripting/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5-I20111104_1115</version>
   </parent>
 
   <groupId>org.nuxeo.runtime</groupId>
