--- a/nuxeo-runtime-start/pom.xml
+++ b/nuxeo-runtime-start/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5-I20111104_1115</version>
   </parent>
 
   <artifactId>nuxeo-runtime-start</artifactId>
