--- a/nuxeo-platform-directory/nuxeo-platform-directory-ldap/pom.xml
+++ b/nuxeo-platform-directory/nuxeo-platform-directory-ldap/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-directory-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5-I20111104_1115</version>
   </parent>
 
   <artifactId>nuxeo-platform-directory-ldap</artifactId>
