--- a/nuxeo-platform-filemanager-core-listener/pom.xml
+++ b/nuxeo-platform-filemanager-core-listener/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5-I20111104_1115</version>
   </parent>
 
   <artifactId>nuxeo-platform-filemanager-core-listener</artifactId>
