--- a/nuxeo-platform-htmlsanitizer/pom.xml
+++ b/nuxeo-platform-htmlsanitizer/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5-I20111104_1115</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
