--- a/nuxeo-platform-types-core/pom.xml
+++ b/nuxeo-platform-types-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5-I20111104_1115</version>
   </parent>
 
   <artifactId>nuxeo-platform-types-core</artifactId>
