--- a/nuxeo-theme-fragments/pom.xml
+++ b/nuxeo-theme-fragments/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.theme</groupId>
     <artifactId>nuxeo-theme-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5-I20111104_1115</version>
   </parent>
 
   <artifactId>nuxeo-theme-fragments</artifactId>
