--- a/nuxeo-distribution-resources/src/main/resources/jetty-base/config/nuxeo.properties
+++ b/nuxeo-distribution-resources/src/main/resources/jetty-base/config/nuxeo.properties
@@ -4,7 +4,7 @@ org.nuxeo.ecm.instance.description=Nuxeo 5.5 Server on Jetty
 
 # product config
 org.nuxeo.ecm.product.name=Nuxeo DM
-org.nuxeo.ecm.product.version=5.5-SNAPSHOT
+org.nuxeo.ecm.product.version=5.5-I20111104_1115
 
 # runtime remoting config
 org.nuxeo.runtime.server.enabled=true
