--- a/nuxeo-distribution-resources/src/main/resources/templates-common/common/config/nuxeo.properties
+++ b/nuxeo-distribution-resources/src/main/resources/templates-common/common/config/nuxeo.properties
@@ -1,6 +1,6 @@
 # application instance config
 org.nuxeo.ecm.instance.host=localhost
-org.nuxeo.ecm.product.version=5.5-SNAPSHOT
+org.nuxeo.ecm.product.version=5.5-I20111104_1115
 
 # runtime remoting config
 org.nuxeo.runtime.server.locator=socket://${nuxeo.bind.address}:62474/?datatype=nuxeo
