--- a/nuxeo-distribution-resources/src/main/resources/templates-jetty/default/config/nuxeo.properties
+++ b/nuxeo-distribution-resources/src/main/resources/templates-jetty/default/config/nuxeo.properties
@@ -5,7 +5,7 @@ org.nuxeo.ecm.instance.host=localhost
 
 # product config
 org.nuxeo.ecm.product.name=${org.nuxeo.ecm.product.name}
-org.nuxeo.ecm.product.version=5.5-SNAPSHOT
+org.nuxeo.ecm.product.version=5.5-I20111104_1115
 
 # runtime remoting config
 org.nuxeo.runtime.server.enabled=true
