--- a/nuxeo-webengine-jaxrs/pom.xml
+++ b/nuxeo-webengine-jaxrs/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.webengine</groupId>
     <artifactId>nuxeo-webengine-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5-I20111104_1115</version>
   </parent>
 
   <artifactId>nuxeo-webengine-jaxrs</artifactId>
