--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.nuxeo</groupId>
   <artifactId>nuxeo-addons-list</artifactId>
-  <version>5.5-SNAPSHOT</version>
+  <version>5.5-I20111104_1115</version>
   <name>Nuxeo Addons list</name>
   <packaging>pom</packaging>
   <description>Nuxeo Addons list</description>
