--- a/nuxeo-apidoc-webengine/pom.xml
+++ b/nuxeo-apidoc-webengine/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-apidoc-server-parent</artifactId>
-    <version>5.5-SNAPSHOT</version>
+    <version>5.5-I20111104_1115</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
