--- a/nuxeo-platform-forms-layout-io-plugins/pom.xml
+++ b/nuxeo-platform-forms-layout-io-plugins/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
-    <artifactId>nuxeo-jsf-parent</artifactId>
+    <artifactId>nuxeo-features-parent</artifactId>
     <version>5.5-SNAPSHOT</version>
   </parent>
 
