--- a/nuxeo-platform-annotations/nuxeo-platform-annotations-web/pom.xml
+++ b/nuxeo-platform-annotations/nuxeo-platform-annotations-web/pom.xml
@@ -10,32 +10,20 @@
   <artifactId>nuxeo-platform-annotations-web</artifactId>
   <name>Nuxeo Platform Annotation Service Client </name>
 
-  <properties>
-    <!-- Explicitly set GWT version to 1.5.3 to compile annotations module -->
-    <gwt.version>1.5.3</gwt.version>
-  </properties>
-
   <dependencies>
+
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-servlet</artifactId>
-      <scope>runtime</scope>
     </dependency>
+
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
-      <version>${gwt.version}</version>
-      <scope>provided</scope>
     </dependency>
+
     <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-dev</artifactId>
-      <version>${gwt.version}</version>
-      <scope>provided</scope>
-      <classifier>${platform}</classifier>
-    </dependency>
-    <dependency>
-      <groupId>com.allen_sauer.gwt.log</groupId>
+      <groupId>com.allen-sauer.gwt.log</groupId>
       <artifactId>gwt-log</artifactId>
     </dependency>
 
@@ -43,27 +31,34 @@
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-api</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-url-api</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-preview</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-theme-jsf</artifactId>
     </dependency>
+
     <dependency>
       <groupId>javax.faces</groupId>
       <artifactId>jsf-api</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.jboss.seam</groupId>
       <artifactId>jboss-seam</artifactId>
     </dependency>
+
   </dependencies>
+
   <build>
     <resources>
       <resource>
@@ -74,16 +69,10 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
-        <!-- Required for Java 1.5 compliance -->
-        <version>1.0</version>
         <executions>
           <execution>
-            <goals>
-              <goal>compile</goal>
-              <goal>test</goal>
-            </goals>
             <configuration>
-              <outputDirectory>${project.build.outputDirectory}/web/nuxeo.war</outputDirectory>
+              <webappDirectory>${project.build.outputDirectory}/web/nuxeo.war</webappDirectory>
               <modules>
                 <module>org.nuxeo.ecm.platform.annotations.gwt.AnnotationFrameModule</module>
                 <module>org.nuxeo.ecm.platform.annotations.gwt.AnnotationModule</module>
@@ -98,7 +87,34 @@
         <configuration>
           <excludes>
             <exclude>**/.gwt-tmp/**</exclude>
+            <exclude>**/gwt-unitCache/**</exclude>
           </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <configuration>
+          <downloadSources>false</downloadSources>
+          <additionalProjectnatures>
+            <projectnature>com.google.gwt.eclipse.core.gwtNature</projectnature>
+            <projectnature>com.google.gdt.eclipse.core.webAppNature</projectnature>
+          </additionalProjectnatures>
+          <additionalBuildcommands>
+            <buildCommand>
+              <name>com.google.gwt.eclipse.core.gwtProjectValidator</name>
+              <arguments>
+              </arguments>
+              <name>com.google.gdt.eclipse.core.webAppProjectValidator</name>
+              <arguments>
+              </arguments>
+            </buildCommand>
+          </additionalBuildcommands>
+          <classpathContainers>
+            <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
+            <classpathContainer>com.google.gwt.eclipse.core.GWT_CONTAINER</classpathContainer>
+          </classpathContainers>
+          <buildOutputDirectory>src/main/resources/web/nuxeo.war/WEB-INF/classes</buildOutputDirectory>
         </configuration>
       </plugin>
       <plugin>
@@ -111,42 +127,4 @@
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>gwt-dev-windows</id>
-      <properties>
-        <platform>windows</platform>
-      </properties>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <os>
-          <family>windows</family>
-        </os>
-      </activation>
-    </profile>
-    <profile>
-      <id>gwt-dev-mac</id>
-      <properties>
-        <platform>mac</platform>
-      </properties>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-    </profile>
-    <profile>
-      <id>gwt-dev-linux</id>
-      <properties>
-        <platform>linux</platform>
-      </properties>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-        <os>
-          <name>linux</name>
-        </os>
-      </activation>
-    </profile>
-  </profiles>
 </project>
