--- a/nuxeo-platform-imaging-tiling/nuxeo-platform-imaging-tiling-preview/pom.xml
+++ b/nuxeo-platform-imaging-tiling/nuxeo-platform-imaging-tiling-preview/pom.xml
@@ -12,11 +12,6 @@
   <artifactId>nuxeo-platform-imaging-tiling-preview</artifactId>
   <name>Nuxeo Picture Tiling Preview</name>
 
-  <properties>
-    <!-- Explicitly set GWT version to 1.5.3 to compile imaging tiling  module -->
-    <gwt.version>1.5.3</gwt.version>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
@@ -41,23 +36,9 @@
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
-      <version>${gwt.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-dev</artifactId>
-      <version>${gwt.version}</version>
-      <classifier>${platform}-libs</classifier>
-      <type>zip</type>
-    </dependency>
-    <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-dev</artifactId>
-      <version>${gwt.version}</version>
-      <classifier>${platform}</classifier>
-    </dependency>
-    <dependency>
-      <groupId>com.allen_sauer.gwt.log</groupId>
+      <groupId>com.allen-sauer.gwt.log</groupId>
       <artifactId>gwt-log</artifactId>
     </dependency>
   </dependencies>
@@ -72,16 +53,10 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
-        <!-- Version 1.0 required for Java 1.5 compliance -->
-        <version>1.0</version>
         <executions>
           <execution>
-            <goals>
-              <goal>compile</goal>
-              <goal>test</goal>
-            </goals>
             <configuration>
-              <outputDirectory>${project.build.outputDirectory}/web/nuxeo.war</outputDirectory>
+              <webappDirectory>${project.build.outputDirectory}/web/nuxeo.war</webappDirectory>
             </configuration>
           </execution>
         </executions>
@@ -91,6 +66,7 @@
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <excludes>
+            <exclude>**/gwt-unitCache/**</exclude>
             <exclude>**/.gwt-tmp/**</exclude>
           </excludes>
         </configuration>
@@ -105,42 +81,4 @@
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <id>gwt-dev-windows</id>
-      <properties>
-        <platform>windows</platform>
-      </properties>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <os>
-          <family>windows</family>
-        </os>
-      </activation>
-    </profile>
-    <profile>
-      <id>gwt-dev-mac</id>
-      <properties>
-        <platform>mac</platform>
-      </properties>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-    </profile>
-    <profile>
-      <id>gwt-dev-linux</id>
-      <properties>
-        <platform>linux</platform>
-      </properties>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-        <os>
-          <name>linux</name>
-        </os>
-      </activation>
-    </profile>
-  </profiles>
 </project>
