--- a/nuxeo-platform-video-streaming/pom.xml
+++ b/nuxeo-platform-video-streaming/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -12,9 +11,7 @@
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-platform-video-streaming</artifactId>
   <name>Nuxeo Platform Video Streaming</name>
-  <description>
-    Nuxeo Platform Video Streaming.
-  </description>
+  <description>Nuxeo Platform Video Streaming.</description>
 
   <dependencies>
     <dependency>
@@ -44,10 +41,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-storage-sql-test</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-video-convert-test-data</artifactId>
-      <version>5.3.2-20100324</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>javax.transaction</groupId>
