--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,18 @@
     <module>nuxeo-platform-video-streaming</module>
   </modules>
 
+  <dependencyManagement>
+    <dependencies>
+      <!-- binaries data used by the tests -->
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-video-convert-test-data</artifactId>
+        <version>5.3.2-20100324</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <developers>
     <developer>
       <name>Olivier Grisel</name>
