--- a/pom.xml
+++ b/pom.xml
@@ -430,6 +430,11 @@
         <artifactId>nuxeo-platform-video-convert</artifactId>
         <version>${nuxeo.addons.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-video-api</artifactId>
+        <version>${nuxeo.addons.version}</version>
+      </dependency>
 
       <!-- Semantic Entities -->
       <dependency>
