--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         <module>nuxeo-distribution-cap</module>
         <module>nuxeo-distribution-cap-tests</module>
         <module>nuxeo-distribution-dm</module>
+        <module>nuxeo-marketplace-dm</module>
         <module>nuxeo-distribution-jboss</module>
         <module>nuxeo-distribution-tomcat</module>
       </modules>
@@ -157,6 +158,12 @@
       <dependency>
         <groupId>org.nuxeo.ecm.distribution</groupId>
         <artifactId>nuxeo-distribution-dm</artifactId>
+        <version>${nuxeo.distribution.version}</version>
+        <type>zip</type>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.distribution</groupId>
+        <artifactId>nuxeo-marketplace-dm</artifactId>
         <version>${nuxeo.distribution.version}</version>
         <type>zip</type>
       </dependency>
