--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
@@ -13,7 +13,7 @@ neutral.medium=#eeeff0
 neutral.strong=#c7c7c7
 neutral.stronger=#8b8b8b
 
-button=#dfdfdf
+button=#e7e7e7
 button.disabled=#f6f6f6
 
 info=#fff1c6
